--- a/docs/modules/ROOT/pages/ec_sigstore_initialize.adoc
+++ b/docs/modules/ROOT/pages/ec_sigstore_initialize.adoc
@@ -13,7 +13,7 @@ The following options are used by default:
 To provide an out-of-band trusted initial root.json, use the --root flag with a file or
 URL reference. This will enable you to point ec to a separate TUF root.
 
-Any updated TUF repository will be written to $HOME/.sigstore/root/.
+Any updated TUF repository will be written to $HOME/.sigstore/root/<mirror_url>.
 
 Trusted keys and certificate used in ec verification (e.g. verifying Fulcio issued certificates
 with Fulcio root CA) are pulled form the trusted metadata.
@@ -42,6 +42,8 @@ ec initialize -mirror <url> -root <url>
 -h, --help:: help for initialize (Default: false)
 --mirror:: GCS bucket to a SigStore TUF repository, or HTTP(S) base URL, or file:/// for local filestore remote (air-gap) (Default: https://tuf-repo-cdn.sigstore.dev)
 --root:: path to trusted initial root. defaults to embedded root
+--root-checksum:: checksum of the initial root, required if root is downloaded via http(s). expects sha256 by default, can be changed to sha512 by providing sha512:<checksum>
+--staging:: use the staging TUF repository (Default: false)
 
 == Options inherited from parent commands
 
